--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.25.1
 executing==1.2.0
 ghp-import==2.1.0
+gunicorn==20.1.0
 inflection==0.5.1
 iniconfig==1.1.1
 ipdb==0.13.9
@@ -54,3 +55,4 @@ traitlets==5.7.0
 uritemplate==4.1.1
 watchdog==2.2.1
 wcwidth==0.2.5
+whitenoise==6.3.0
